profilelist1exp/unpackaged/objects/Customer_Number__c.object
<CustomObject>
    <fields>
        <fullName>Account_AffinityID__c</fullName>
        <inlineHelpText>This field will be populated by INFA</inlineHelpText>
        <label>Account AffinityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Affinity_ID__c</fullName>
        <formula>Account__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Affinity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-Y /NON INTEG - N / APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -||
SFA -N/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Numbers</relationshipLabel>
        <relationshipName>Customer_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_ID__c</fullName>
        <defaultValue>&quot;EMC&quot;</defaultValue>
        <description>INTEG-Y /NON INTEG - N / APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -DO NOT MODIFY WITHOUT CONSENT FROM INTEGRATION TEAM||
SFA -N/PRM -N||
VAL -N|| 
CR# - ||</description>
        <label>BU ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_BU_Integ__c</fullName>
        <description>INTEG-Y /NON INTEG - N / APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -DO NOT MODIFY WITHOUT CONSENT FROM INTEGRATION TEAM||
SFA -N/PRM -N||
VAL -  Y-Integration_Field_Equals_Record_Name|| 
CR# - ||</description>
        <externalId>true</externalId>
        <label>Customer Number BU Integ</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Number_Name_Old__c</fullName>
        <description>INTEG-N /NON INTEG -Y/ APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -||
SFA -Y/PRM -N||
VAL -N-|| 
CR# - ||</description>
        <label>Customer Number Name Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_Name__c</fullName>
        <description>INTEG-N /NON INTEG -Y/ APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -||
SFA -Y/PRM -N||
VAL -N-|| 
CR# - ||</description>
        <label>Customer Number Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_Name__c</fullName>
        <description>INTEG-N /NON INTEG -Y/ APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -||
SFA -Y/PRM -N||
VAL -N-|| 
CR# - ||</description>
        <label>Legacy Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omega_Number__c</fullName>
        <description>INTEG-Y /NON INTEG - N / APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -Omega # is read only to all Users and only APPears on the EMEA page layouts||
SFA -N/PRM -N||
VAL -N|| 
CR# - ||</description>
        <externalId>true</externalId>
        <label>Omega #</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5-4-2016 Afiq - Added this field to provide capability for Affinity to flag which UCID of EMC is the primary</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Queue_Country_Code__c</fullName>
        <label>Queue Country Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Region__c</fullName>
        <label>Queue Region</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Quotes__c</fullName>
        <description>INTEG-N /NON INTEG -Y/ APEX/CC - N||
WF / APP/ FU / OM -  N||
Desc -||
SFA -Y/PRM -N||
VAL -N-|| 
CR# - ||</description>
        <formula>HYPERLINK(&apos;/servlet/servlet.Integration?scontrolCaching=1&amp;lid=01N700000005zvW&amp;eid=&apos; &amp; Id &amp; &apos;&amp;ic=1&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=01570000000qu4G&apos;, &apos;Gedis Quotes&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Quotes</label>
        <type>Text</type>
    </fields>
    <label>Customer Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Numbers</pluralLabel>
    <recordTypes>
        <fullName>EMC_RT</fullName>
        <active>true</active>
        <description>This is a record type created to support EMC customer number informations</description>
        <label>EMC</label>
    </recordTypes>
    <recordTypes>
        <fullName>GBL_Customer_No_RT</fullName>
        <active>true</active>
        <label>GBL_Customer_No_RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Integration_Field_Equals_Record_Name</fullName>
        <active>true</active>
        <description>This validation is primarily for those countries that are not on Affinity and where Customer Number records are being created manually.  INTEGRATION ALSO REQUIRES THIS SYNTAX</description>
        <errorConditionFormula>AND(RecordType.DeveloperName &lt;&gt; &apos;EMC_RT&apos;,Customer_Number_BU_Integ__c &lt;&gt;(Name &amp; BU_ID__c), 
NOT(CONTAINS(Name ,&quot;ACQ-EMC&quot;)),
NOT(AND(Queue_Region__c =&quot;XREF&quot;)))</errorConditionFormula>
        <errorDisplayField>Customer_Number_BU_Integ__c</errorDisplayField>
        <errorMessage>This value must equal the Customer Number + BU</errorMessage>
    </validationRules>
</CustomObject>